--- a/Safar/App/Launch Screen.storyboard
+++ b/Safar/App/Launch Screen.storyboard
@@ -16,12 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="safar_logo" translatesAutoresizingMaskIntoConstraints="NO" id="2Er-gT-wma">
-                                <rect key="frame" x="-22" y="303" width="437" height="246"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="safar_logo" translatesAutoresizingMaskIntoConstraints="NO" id="2Er-gT-wma">
+                                <rect key="frame" x="56.5" y="371" width="840" height="330"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="840" id="w1d-xK-9mZ"/>
+                                    <constraint firstAttribute="height" constant="330" id="h2e-yL-0nA"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
+                        <constraints>
+                            <constraint firstItem="2Er-gT-wma" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cX1-aB-3cD"/>
+                            <constraint firstItem="2Er-gT-wma" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cY2-eF-4gH"/>
+                        </constraints>
                         <color key="backgroundColor" name="Background"/>
                     </view>
                 </viewController>
